--- a/adc.html
+++ b/adc.html
@@ -224,27 +224,27 @@
                     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="./imgs/imagenes-AdcGuide/Ashe.png" class="d-block w-100" alt="campeon kaisa">
+                                <img src="./imgs/imagenes-AdcGuide/Ashe.png" class="d-block w-100" alt="campeon Ashe">
                                 <div class="carousel-caption d-md-block cont-titulo-carrusel">
                                     <h5 class="titulo-carrusel">Ashe</h5>
                                 </div>
                             </div>
                             <div class="carousel-item">
                                 <img src="./imgs/imagenes-AdcGuide/Sivir.png" class="d-block w-100"
-                                    alt="campeon kalista">
+                                    alt="campeon Sivir">
                                 <div class="carousel-caption d-md-block cont-titulo-carrusel">
                                     <h5 class="titulo-carrusel">Sivir</h5>
                                 </div>
                             </div>
                             <div class="carousel-item">
-                                <img src="./imgs/imagenes-AdcGuide/Senna.png" class="d-block w-100" alt="campeon vayne">
+                                <img src="./imgs/imagenes-AdcGuide/Senna.png" class="d-block w-100" alt="campeon Senna">
                                 <div class="carousel-caption d-md-block cont-titulo-carrusel">
                                     <h5 class="titulo-carrusel">Senna</h5>
                                 </div>
                             </div>
                             <div class="carousel-item">
                                 <img src="./imgs/imagenes-AdcGuide/Kalista.png" class="d-block w-100"
-                                    alt="campeon vayne">
+                                    alt="campeon Kalista">
                                 <div class="carousel-caption d-md-block cont-titulo-carrusel">
                                     <h5 class="titulo-carrusel">Kalista</h5>
                                 </div>
@@ -271,38 +271,68 @@
                         pero en el juego temprano suelen sufrir mucho, por lo que necesitan de soportes que puedan
                         hacerle peel, para que puedan escalar. Los siguientes campeones son adc hipercarrys:
                     </p>
-                    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                    <div id="carrusel-hiperrcarrys" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="./imgs/imagenes-AdcGuide/Ashe.png" class="d-block w-100" alt="campeon kaisa">
+                                <img src="./imgs/imagenes-AdcGuide/Aphelios.png" class="d-block w-100" alt="campeon Aphelios">
                                 <div class="carousel-caption d-md-block cont-titulo-carrusel">
-                                    <h5 class="titulo-carrusel">Ashe</h5>
+                                    <h5 class="titulo-carrusel">Aphelios</h5>
                                 </div>
                             </div>
                             <div class="carousel-item">
-                                <img src="./imgs/imagenes-AdcGuide/Sivir.png" class="d-block w-100" alt="campeon kalista">
+                                <img src="./imgs/imagenes-AdcGuide/Draven.png" class="d-block w-100" alt="campeon Draven">
                                 <div class="carousel-caption d-md-block cont-titulo-carrusel">
-                                    <h5 class="titulo-carrusel">Sivir</h5>
+                                    <h5 class="titulo-carrusel">Draven</h5>
                                 </div>
                             </div>
                             <div class="carousel-item">
-                                <img src="./imgs/imagenes-AdcGuide/Senna.png" class="d-block w-100" alt="campeon vayne">
+                                <img src="./imgs/imagenes-AdcGuide/Jinx.png" class="d-block w-100" alt="campeon Jinx">
                                 <div class="carousel-caption d-md-block cont-titulo-carrusel">
-                                    <h5 class="titulo-carrusel">Senna</h5>
+                                    <h5 class="titulo-carrusel">Jinx</h5>
                                 </div>
                             </div>
                             <div class="carousel-item">
-                                <img src="./imgs/imagenes-AdcGuide/Kalista.png" class="d-block w-100" alt="campeon vayne">
+                                <img src="./imgs/imagenes-AdcGuide/kaisa.png" class="d-block w-100" alt="campeon Kaisa">
                                 <div class="carousel-caption d-md-block cont-titulo-carrusel">
-                                    <h5 class="titulo-carrusel">Kalista</h5>
+                                    <h5 class="titulo-carrusel">Kaisa</h5>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img src="./imgs/imagenes-AdcGuide/Kogmaw.png" class="d-block w-100" alt="campeon Kog Maw">
+                                <div class="carousel-caption d-md-block cont-titulo-carrusel">
+                                    <h5 class="titulo-carrusel">Kog Maw</h5>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img src="./imgs/imagenes-AdcGuide/Tristana.png" class="d-block w-100" alt="campeon Tristana">
+                                <div class="carousel-caption d-md-block cont-titulo-carrusel">
+                                    <h5 class="titulo-carrusel">Tristana</h5>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img src="./imgs/imagenes-AdcGuide/Twitch.png" class="d-block w-100" alt="campeon Twitch">
+                                <div class="carousel-caption d-md-block cont-titulo-carrusel">
+                                    <h5 class="titulo-carrusel">Twitch</h5>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img src="./imgs/imagenes-AdcGuide/vayne.png" class="d-block w-100" alt="campeon Vayne">
+                                <div class="carousel-caption d-md-block cont-titulo-carrusel">
+                                    <h5 class="titulo-carrusel">Vayne</h5>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img src="./imgs/imagenes-AdcGuide/Xayah.png" class="d-block w-100" alt="campeon Xayah">
+                                <div class="carousel-caption d-md-block cont-titulo-carrusel">
+                                    <h5 class="titulo-carrusel">Xayah</h5>
                                 </div>
                             </div>
                         </div>
-                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carrusel-hiperrcarrys" data-bs-slide="prev">
                             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                             <span class="visually-hidden">Previous</span>
                         </button>
-                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                        <button class="carousel-control-next" type="button" data-bs-target="#carrusel-hiperrcarrys" data-bs-slide="next">
                             <span class="carousel-control-next-icon" aria-hidden="true"></span>
                             <span class="visually-hidden">Next</span>
                         </button>
@@ -317,55 +347,55 @@
                         Esto no quiere decir que no tengan que usar sus ataques básicos. Los
                         siguientes campeones son adc casters:
                     </p>
-                    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                    <div id="carrusel-casters" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="./imgs/imagenes-conoceme/kaisa.png" class="d-block w-100" alt="campeon kaisa">
+                                <img src="./imgs/imagenes-AdcGuide/Ezreal.png" class="d-block w-100" alt="campeon Ezreal">
                                 <div class="carousel-caption d-md-block cont-titulo-carrusel">
                                     <h5 class="titulo-carrusel">Ezreal</h5>
                                 </div>
                             </div>
                             <div class="carousel-item">
-                                <img src="./imgs/imagenes-conoceme/kalista.png" class="d-block w-100"
-                                    alt="campeon kalista">
+                                <img src="./imgs/imagenes-AdcGuide/Jhin.png" class="d-block w-100"
+                                    alt="campeon Jhin">
                                 <div class="carousel-caption d-md-block cont-titulo-carrusel">
                                     <h5 class="titulo-carrusel">Jhin</h5>
                                 </div>
                             </div>
                             <div class="carousel-item">
-                                <img src="./imgs/imagenes-conoceme/vayne.png" class="d-block w-100" alt="campeon vayne">
+                                <img src="./imgs/imagenes-AdcGuide/lucian.png" class="d-block w-100" alt="campeon Lucian">
                                 <div class="carousel-caption d-md-block cont-titulo-carrusel">
                                     <h5 class="titulo-carrusel">Lucian</h5>
                                 </div>
                             </div>
                             <div class="carousel-item">
-                                <img src="./imgs/imagenes-conoceme/lucian.png" class="d-block w-100"
-                                    alt="campeon vayne">
+                                <img src="./imgs/imagenes-AdcGuide/Miss-Fortune.png" class="d-block w-100"
+                                    alt="campeon Miss Fortune">
                                 <div class="carousel-caption d-md-block cont-titulo-carrusel">
                                     <h5 class="titulo-carrusel">Miss Fortune</h5>
                                 </div>
                             </div>
                             <div class="carousel-item">
-                                <img src="./imgs/imagenes-conoceme/lucian.png" class="d-block w-100"
-                                    alt="campeon vayne">
+                                <img src="./imgs/imagenes-AdcGuide/Samira.png" class="d-block w-100"
+                                    alt="campeon Samira">
                                 <div class="carousel-caption d-md-block cont-titulo-carrusel">
                                     <h5 class="titulo-carrusel">Samira</h5>
                                 </div>
                             </div>
                             <div class="carousel-item">
-                                <img src="./imgs/imagenes-conoceme/lucian.png" class="d-block w-100"
-                                    alt="campeon vayne">
+                                <img src="./imgs/imagenes-AdcGuide/Varus.png" class="d-block w-100"
+                                    alt="campeon varus">
                                 <div class="carousel-caption d-md-block cont-titulo-carrusel">
                                     <h5 class="titulo-carrusel">Varus</h5>
                                 </div>
                             </div>
                         </div>
-                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carrusel-casters"
                             data-bs-slide="prev">
                             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                             <span class="visually-hidden">Previous</span>
                         </button>
-                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                        <button class="carousel-control-next" type="button" data-bs-target="#carrusel-casters"
                             data-bs-slide="next">
                             <span class="carousel-control-next-icon" aria-hidden="true"></span>
                             <span class="visually-hidden">Next</span>
@@ -381,48 +411,48 @@
                         y/o habilidades para desgastar al enemigo, para que este no pueda pelear.
                         Los siguientes campeones son adc de asedio:
                     </p>
-                    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                    <div id="Carrusel-asedio" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="./imgs/imagenes-conoceme/kaisa.png" class="d-block w-100" alt="campeon kaisa">
+                                <img src="./imgs/imagenes-AdcGuide/Caitlyn.png" class="d-block w-100" alt="campeon Caitlyn">
                                 <div class="carousel-caption d-md-block cont-titulo-carrusel">
                                     <h5 class="titulo-carrusel">Caitlyn</h5>
                                 </div>
                             </div>
                             <div class="carousel-item">
-                                <img src="./imgs/imagenes-conoceme/kalista.png" class="d-block w-100"
-                                    alt="campeon kalista">
+                                <img src="./imgs/imagenes-AdcGuide/Ezreal.png" class="d-block w-100"
+                                    alt="campeon Ezreal">
                                 <div class="carousel-caption d-md-block cont-titulo-carrusel">
                                     <h5 class="titulo-carrusel">Ezreal</h5>
                                 </div>
                             </div>
                             <div class="carousel-item">
-                                <img src="./imgs/imagenes-conoceme/vayne.png" class="d-block w-100" alt="campeon vayne">
+                                <img src="./imgs/imagenes-AdcGuide/Miss-Fortune.png" class="d-block w-100" alt="campeon Miss Fortune">
                                 <div class="carousel-caption d-md-block cont-titulo-carrusel">
                                     <h5 class="titulo-carrusel">Miss fortune</h5>
                                 </div>
                             </div>
                             <div class="carousel-item">
-                                <img src="./imgs/imagenes-conoceme/lucian.png" class="d-block w-100"
-                                    alt="campeon vayne">
+                                <img src="./imgs/imagenes-AdcGuide/Sivir.png" class="d-block w-100"
+                                    alt="campeon Sivir">
                                 <div class="carousel-caption d-md-block cont-titulo-carrusel">
                                     <h5 class="titulo-carrusel">Sivir</h5>
                                 </div>
                             </div>
                             <div class="carousel-item">
-                                <img src="./imgs/imagenes-conoceme/lucian.png" class="d-block w-100"
-                                    alt="campeon vayne">
+                                <img src="./imgs/imagenes-AdcGuide/Varus.png" class="d-block w-100"
+                                    alt="campeon varus">
                                 <div class="carousel-caption d-md-block cont-titulo-carrusel">
                                     <h5 class="titulo-carrusel">Varus</h5>
                                 </div>
                             </div>
                         </div>
-                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                        <button class="carousel-control-prev" type="button" data-bs-target="#Carrusel-asedio"
                             data-bs-slide="prev">
                             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                             <span class="visually-hidden">Previous</span>
                         </button>
-                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                        <button class="carousel-control-next" type="button" data-bs-target="#Carrusel-asedio"
                             data-bs-slide="next">
                             <span class="carousel-control-next-icon" aria-hidden="true"></span>
                             <span class="visually-hidden">Next</span>
