comprmi las imagenes

--- a/adc.html
+++ b/adc.html
@@ -157,6 +157,7 @@
 
             <!-- contenido principal -->
             <div class="section-guiaAdc__cont-texto">
+                <!-- como kitear -->
                 <div>
                     <h2>Kiteo</h2>
                     <img src="./imgs/imagenes-AdcGuide/kiteo.png"
@@ -197,6 +198,7 @@
                 </div>
             </div>
 
+            <!-- diferentes tipos de tiradores -->
             <div class="section-guiaAdc__cont-texto">
                 <div>
                     <h2>Tipos de adc</h2>
@@ -221,6 +223,7 @@
                         utilidad.
                         Los siguientes campeones son adc de utilidad:
                     </p>
+                    <!-- carrusel utilidad -->
                     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
@@ -271,6 +274,7 @@
                         pero en el juego temprano suelen sufrir mucho, por lo que necesitan de soportes que puedan
                         hacerle peel, para que puedan escalar. Los siguientes campeones son adc hipercarrys:
                     </p>
+                    <!-- carrusel hiperrcarrys -->
                     <div id="carrusel-hiperrcarrys" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
@@ -347,6 +351,7 @@
                         Esto no quiere decir que no tengan que usar sus ataques básicos. Los
                         siguientes campeones son adc casters:
                     </p>
+                    <!-- carrusel adcasters -->
                     <div id="carrusel-casters" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
@@ -411,6 +416,7 @@
                         y/o habilidades para desgastar al enemigo, para que este no pueda pelear.
                         Los siguientes campeones son adc de asedio:
                     </p>
+                    <!-- carrusel asedio -->
                     <div id="Carrusel-asedio" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
@@ -461,6 +467,8 @@
                 </div>
             </div>
 
+
+            <!-- micro juego -->
             <div class="section-guiaAdc__cont-texto">
                 <h2>Micro game como adc</h2>
                 <div id="posicionamiento">
@@ -526,6 +534,7 @@
                 </div>
             </div>
 
+            <!-- macro juego -->
             <div class="section-guiaAdc__cont-texto">
                 <h2>Macro game como adc</h2>
                 <div id="itemizacion">
